--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -1,8 +1,11 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <CascadingAuthenticationState>
+            <NavMenu />
+        </CascadingAuthenticationState>
     </div>
 
     <main>
